src/App.css
.App {
  text-align: center;
}
.logo {
  width: 200px;
}
.tub {
  margin-left: 20px;
  margin-right: 20px;
}
.mag {
  margin-left: 20px;
}
.hidden {
  opacity: 0;
}
.container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 200px;
  max-width: 1500px;
}
.logo-a {
  height: 200px;
}
.bdiv {
  padding-left: 50px;

}

.navbar {
  
  display: flex;
  justify-content: space-between;
}
.nav-links {
  display: flex;
}
.footerbar {
  display: flex;
  justify-content: space-between;
  width: 100%;
}
.footer-links {
  display: flex;
  margin-right: 50px;
  
}
.footer-links a {
  color: black;
}
.verse {
  width: 400px;
  margin-left: auto;
  margin-right: auto;
}
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  
}


li a {
  display: block;
  color: rgb(230, 233, 54);
  text-align: center;
  padding: 14px 20px;
  text-decoration: none;
 
  
}




.App-logo {
  height: 40vmin;
  pointer-events: none;
}


.App-header {
  background-color: #282c34;
  /*min-height: 100vh;*/
  
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}


/*large*/
@media screen and (min-width: 1024px) {
  
  .navTrigger {
    visibility: hidden;
    height: 0;
  }
  /*body {
    background-color: violet;
  }*/
}
/*Desktop*/
@media screen and (min-width: 768px) and (max-width: 1024px) {
  .navTrigger {
    visibility: hidden;
    height: 0;
  }
  /*body {
    background-color: green;
  }*/
}
/*Ipad*/
@media screen and (max-width:768px) {
  .vk {
    display:none;
  }
  .mag {
    display:none;
  }
  .nav-links {
    flex-direction: column;
    height: auto;
  }
  .navTrigger {
    padding-left:20px;
  }
  .verse {
    visibility: hidden;
    width: 0;
  }
  /*body {
    background-color: yellow;
  }*/

}
/*mobile*/
@media screen and (max-width:500px) {
  .vk {
    display:none;
  }
  .mag {
    display:none;
  }
  .nav-links {
    flex-direction: column;
    height: auto;
  }
  .verse {
    visibility: hidden;
    width: 0;
  }
  .navTrigger {
    padding-left:20px;
  }
  /*body {
    background-color: blue;
  }*/
}

/* Animation */
/* Inspiration taken from Dicson https://codemyui.com/simple-hamburger-menu-x-mark-animation/ */

.navTrigger {
  cursor: pointer;
  width: 30px;
  height: 25px;
  margin: auto;
  left: 10px;
  right: 30px;
  top: 0;
  bottom: 0;
}

.navTrigger i {
  background-color: rgb(230, 233, 54);
  border-radius: 2px;
  content: '';
  display: block;
  width: 100%;
  height: 4px;
}

.navTrigger i:nth-child(1) {
  -webkit-animation: outT 0.8s backwards;
  animation: outT 0.8s backwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}

.navTrigger i:nth-child(2) {
  margin: 5px 0;
  -webkit-animation: outM 0.8s backwards;
  animation: outM 0.8s backwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}

.navTrigger i:nth-child(3) {
  -webkit-animation: outBtm 0.8s backwards;
  animation: outBtm 0.8s backwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}

.navTrigger.active i:nth-child(1) {
  -webkit-animation: inT 0.8s forwards;
  animation: inT 0.8s forwards;
}

.navTrigger.active i:nth-child(2) {
  -webkit-animation: inM 0.8s forwards;
  animation: inM 0.8s forwards;
}

.navTrigger.active i:nth-child(3) {
  -webkit-animation: inBtm 0.8s forwards;
  animation: inBtm 0.8s forwards;
}

@-webkit-keyframes inM {
  50% {
      -webkit-transform: rotate(0deg);
  }
  100% {
      -webkit-transform: rotate(45deg);
  }
}

@keyframes inM {
  50% {
      transform: rotate(0deg);
  }
  100% {
      transform: rotate(45deg);
  }
}

@-webkit-keyframes outM {
  50% {
      -webkit-transform: rotate(0deg);
  }
  100% {
      -webkit-transform: rotate(45deg);
  }
}

@keyframes outM {
  50% {
      transform: rotate(0deg);
  }
  100% {
      transform: rotate(45deg);
  }
}

@-webkit-keyframes inT {
  0% {
      -webkit-transform: translateY(0px) rotate(0deg);
  }
  50% {
      -webkit-transform: translateY(9px) rotate(0deg);
  }
  100% {
      -webkit-transform: translateY(9px) rotate(135deg);
  }
}

@keyframes inT {
  0% {
      transform: translateY(0px) rotate(0deg);
  }
  50% {
      transform: translateY(9px) rotate(0deg);
  }
  100% {
      transform: translateY(9px) rotate(135deg);
  }
}

@-webkit-keyframes outT {
  0% {
      -webkit-transform: translateY(0px) rotate(0deg);
  }
  50% {
      -webkit-transform: translateY(9px) rotate(0deg);
  }
  100% {
      -webkit-transform: translateY(9px) rotate(135deg);
  }
}

@keyframes outT {
  0% {
      transform: translateY(0px) rotate(0deg);
  }
  50% {
      transform: translateY(9px) rotate(0deg);
  }
  100% {
      transform: translateY(9px) rotate(135deg);
  }
}

@-webkit-keyframes inBtm {
  0% {
      -webkit-transform: translateY(0px) rotate(0deg);
  }
  50% {
      -webkit-transform: translateY(-9px) rotate(0deg);
  }
  100% {
      -webkit-transform: translateY(-9px) rotate(135deg);
  }
}

@keyframes inBtm {
  0% {
      transform: translateY(0px) rotate(0deg);
  }
  50% {
      transform: translateY(-9px) rotate(0deg);
  }
  100% {
      transform: translateY(-9px) rotate(135deg);
  }
}

@-webkit-keyframes outBtm {
  0% {
      -webkit-transform: translateY(0px) rotate(0deg);
  }
  50% {
      -webkit-transform: translateY(-9px) rotate(0deg);
  }
  100% {
      -webkit-transform: translateY(-9px) rotate(135deg);
  }
}

@keyframes outBtm {
  0% {
      transform: translateY(0px) rotate(0deg);
  }
  50% {
      transform: translateY(-9px) rotate(0deg);
  }
  100% {
      transform: translateY(-9px) rotate(135deg);
  }
}

